--- a/3.html
+++ b/3.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>WEB1 - JavaScript</title>
-        <meta charset="utp-8">
+        <meta charset="utf-8">
     
     </head>
     
